api mini phrases completed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>Mini API App</title>
   </head>
   <body>
-    <div class="container" id="textContainer">
+    <div class="text-container" id="textContainer">
+      <section class="leaf-draw">
+        <span class="quotation-comma one"></span>
+        <span class="quotation-comma two"></span>
+        <span class="quotation-comma three"></span>
+        <span class="quotation-comma four"></span>
+        <span class="quotation-comma five"></span>
+      </section>
       <h1 id="text"></h1>
     </div>
     <script src="script.js"></script>
